Don't make builder extend SparkLauncher.
Instead, make SparkLauncher a thin layer on top of SparkSubmitCommandBuilder,
and make all the builder code internal to the library.